# kakoune

./: .clang-format  CMakeLists.txt  LICENSE  Makefile
cmake/: ExternalData.cmake  FindNCursesw.cmake
src/: alias_registry.cc  alias_registry.hh  array_view.hh  assert.cc  assert.hh  backtrace.cc  backtrace.hh  buffer.cc  buffer.hh  buffer.inl.hh  buffer_manager.cc  buffer_manager.hh  buffer_utils.cc  buffer_utils.hh  client.cc  client.hh  client_manager.cc  client_manager.hh  color.cc  color.hh  command_manager.cc  command_manager.hh  commands.cc  commands.hh  completion.cc  completion.hh  containers.hh  context.cc  context.hh  coord.hh  debug.h  diff.hh  display_buffer.cc  display_buffer.hh  enum.hh  env_vars.cc  env_vars.hh  event_manager.cc  event_manager.hh  exception.cc  (+81 more)
src_module/: kakoune.cc  kakoune_py.hh  main.cc  main.py
superbuild/: CMakeLists.txt  External-Python.cmake  External-zlib.cmake  superbuild.cmake
